--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">验证码</label>
                 <div class="layui-input-inline">
-                    <input type="password" name="confirm" class="layui-input" placeholder="确认密码"/>
+                    <input type="password" name="confirm" class="layui-input" placeholder="验证码"/>
                 </div>
                 <span class="verify">
                     <img src="" alt="">
