新增搜索列表页面

--- a/content.html
+++ b/content.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>老张博客上线了</title>
+    <title>博客上线了</title>
     <link rel="stylesheet" href="./lib/layui/css/layui.css"  media="all">
     <link rel="stylesheet" href="css/nav.css"/>
     <link rel="stylesheet" href="css/footer.css">
@@ -14,23 +14,30 @@
     <ul class="layui-nav">
         <li class="layui-nav-item layui-this">
             <a href="">首页</a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">编程语言</a>
             <dl class="layui-nav-child">
-                <dd><a href="">首页子项1</a></dd>
-                <dd><a href="">首页子项2</a></dd>
-                <dd><a href="">首页子项3</a></dd>
+                <dd><a href="">java</a></dd>
+                <dd><a href="">c++</a></dd>
+                <dd><a href="">js</a></dd>
+                <dd><a href="">html/css</a></dd>
             </dl>
         </li>
         <li class="layui-nav-item">
-            <a href="">老高推荐的VPS</a>
+            <a href="">后台技术</a>
+            <dl class="layui-nav-child">
+                <dd><a href="">SpringBoot</a></dd>
+                <dd><a href="">Hibernate</a></dd>
+                <dd><a href="">Struts2</a></dd>
+                <dd><a href="">SpringMVC</a></dd>
+            </dl>
         </li>
         <li class="layui-nav-item">
-            <a href="">路由器教程</a>
+            <a href="">生活感悟</a>
         </li>
         <li class="layui-nav-item">
-            <a href="">翻越功夫墙</a>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">Typecho插件</a>
+            <a href="">杂谈</a>
         </li>
         <li class="layui-nav-item">
             <a href="">归档</a>
@@ -44,8 +51,8 @@
     <span class="search-btn">
             <input type="text" placeholder="搜索" class="search-input" maxlength="20"/>
             <i class="layui-icon">&#xe615;</i>
-    </span>
-    </div>
+        </span>
+</div>
     <!--说明-->
     <div class="site-tips site-text explain">
         <p>
@@ -91,13 +98,13 @@
                         <a href="" class="layui-btn">杂谈</a>
                     </li>
                     <li>
-                        <a href="" class="layui-btn">PHP</a>
+                        <a href="" class="layui-btn">后台</a>
                     </li>
                     <li>
-                        <a href="" class="layui-btn">建站</a>
+                        <a href="" class="layui-btn">生活</a>
                     </li>
                     <li>
-                        <a href="" class="layui-btn">WEB前端</a>
+                        <a href="" class="layui-btn">编程</a>
                     </li>
                 </ul>
             </div>
