--- a/journal.html
+++ b/journal.html
@@ -8,29 +8,38 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/journal.css">
     <script src="./lib/jquery-3.1.1.min.js"></script>
+    <script src="./lib/angular/angular.min.js"></script>
 </head>
-<body>
+<body ng-app="app">
+
     <div class="nav">
     <ul class="layui-nav">
         <li class="layui-nav-item layui-this">
             <a href="">首页</a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">编程语言</a>
             <dl class="layui-nav-child">
-                <dd><a href="">首页子项1</a></dd>
-                <dd><a href="">首页子项2</a></dd>
-                <dd><a href="">首页子项3</a></dd>
+                <dd><a href="">java</a></dd>
+                <dd><a href="">c++</a></dd>
+                <dd><a href="">js</a></dd>
+                <dd><a href="">html/css</a></dd>
             </dl>
         </li>
         <li class="layui-nav-item">
-            <a href="">老高推荐的VPS</a>
+            <a href="">后台技术</a>
+            <dl class="layui-nav-child">
+                <dd><a href="">SpringBoot</a></dd>
+                <dd><a href="">Hibernate</a></dd>
+                <dd><a href="">Struts2</a></dd>
+                <dd><a href="">SpringMVC</a></dd>
+            </dl>
         </li>
         <li class="layui-nav-item">
-            <a href="">路由器教程</a>
+            <a href="">生活感悟</a>
         </li>
         <li class="layui-nav-item">
-            <a href="">翻越功夫墙</a>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">Typecho插件</a>
+            <a href="">杂谈</a>
         </li>
         <li class="layui-nav-item">
             <a href="">归档</a>
@@ -38,14 +47,14 @@
         <li class="layui-nav-item">
             <a href="">关于我</a>
         </li>
-
     </ul>
     <!--搜索栏-->
     <span class="search-btn">
             <input type="text" placeholder="搜索" class="search-input" maxlength="20"/>
             <i class="layui-icon">&#xe615;</i>
-    </span>
+        </span>
 </div>
+
     <div class="site-tips explain">
         <p>
             <a href="">首页</a><span>—</span>
@@ -57,28 +66,28 @@
             <i class="layui-icon">&#xe642;</i>
             <span class="sub-title">个人日记生成记录</span>
         </div>
-        <ul>
-            <li>
-                <span>2017年02月25日</span>
+        <ul ng-controller="listController">
+            <li ng-repeat="x in arr">
+                <span>{{x.date}}</span>
                 <span class="icon">
                     <i class="layui-icon">&#xe617;</i>
                 </span>
-                <span>老张博客的后台模版已做分享，用的layui搭建的简洁大方的前台模版，简单易用，方便！</span>
+                <span>{{x.thing}}</span>
             </li>
-            <li>
-                <span>2017年02月25日</span>
-                <span>
-                    <i class="layui-icon">&#xe617;</i>
-                </span>
-                <span>老张博客的后台模版已做分享，用的layui搭建的简洁大方的前台模版，简单易用，方便！</span>
-            </li>
-            <li>
-                <span>2017年02月25日</span>
-                <span>
-                    <i class="layui-icon">&#xe617;</i>
-                </span>
-                <span>老张博客的后台模版已做分享，用的layui搭建的简洁大方的前台模版，简单易用，方便！</span>
-            </li>
+            <!--<li>-->
+                <!--<span>2017年02月25日</span>-->
+                <!--<span>-->
+                    <!--<i class="layui-icon">&#xe617;</i>-->
+                <!--</span>-->
+                <!--<span>老张博客的后台模版已做分享，用的layui搭建的简洁大方的前台模版，简单易用，方便！</span>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<span>2017年02月25日</span>-->
+                <!--<span>-->
+                    <!--<i class="layui-icon">&#xe617;</i>-->
+                <!--</span>-->
+                <!--<span>老张博客的后台模版已做分享，用的layui搭建的简洁大方的前台模版，简单易用，方便！</span>-->
+            <!--</li>-->
         </ul>
     </div>
     <div class="layui-footer footer">
@@ -94,6 +103,7 @@
 </body>
 <script src="./lib/layui/layui.js"></script>
 <script src="js/common.js"></script>
+<script src="js/journal.js"></script>
 <script>
     layui.use('element', function() {
 
