--- a/list.html
+++ b/list.html
@@ -2,236 +2,120 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>分享无价</title>
+    <title>列表-大图</title>
     <link rel="stylesheet" href="./lib/layui/css/layui.css"  media="all">
     <link rel="stylesheet" href="css/nav.css"/>
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/list.css">
     <script src="./lib/jquery-3.1.1.min.js"></script>
+    <script src="./lib/angular/angular.min.js"></script>
 </head>
-<body>
+<body ng-app="app">
+    <!--导航条-->
     <div class="nav">
-        <ul class="layui-nav">
-            <li class="layui-nav-item layui-this">
-                <a href="">首页</a>
-                <dl class="layui-nav-child">
-                    <dd><a href="">首页子项1</a></dd>
-                    <dd><a href="">首页子项2</a></dd>
-                    <dd><a href="">首页子项3</a></dd>
-                </dl>
-            </li>
-            <li class="layui-nav-item">
-                <a href="">老高推荐的VPS</a>
-            </li>
-            <li class="layui-nav-item">
-                <a href="">路由器教程</a>
-            </li>
-            <li class="layui-nav-item">
-                <a href="">翻越功夫墙</a>
-            </li>
-            <li class="layui-nav-item">
-                <a href="">Typecho插件</a>
-            </li>
-            <li class="layui-nav-item">
-                <a href="">归档</a>
-            </li>
-            <li class="layui-nav-item">
-                <a href="">关于我</a>
-            </li>
-
-        </ul>
-        <!--搜索栏-->
-        <span class="search-btn">
-                <input type="text" placeholder="搜索" class="search-input layui-anim" maxlength="20"/>
-                <i class="layui-icon">&#xe615;</i>
-            </span>
+    <ul class="layui-nav">
+        <li class="layui-nav-item layui-this">
+            <a href="">首页</a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">编程语言</a>
+            <dl class="layui-nav-child">
+                <dd><a href="">java</a></dd>
+                <dd><a href="">c++</a></dd>
+                <dd><a href="">js</a></dd>
+                <dd><a href="">html/css</a></dd>
+            </dl>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">后台技术</a>
+            <dl class="layui-nav-child">
+                <dd><a href="">SpringBoot</a></dd>
+                <dd><a href="">Hibernate</a></dd>
+                <dd><a href="">Struts2</a></dd>
+                <dd><a href="">SpringMVC</a></dd>
+            </dl>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">生活感悟</a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">杂谈</a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">归档</a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">关于我</a>
+        </li>
+    </ul>
+    <!--搜索栏-->
+    <span class="search-btn">
+            <input type="text" placeholder="搜索" class="search-input" maxlength="20"/>
+            <i class="layui-icon">&#xe615;</i>
         </span>
-    </div>
+</div>
 
     <div class="site-tips head">
-        <p><a href="">首页</a><span>—</span>分享无价</p>
+        <p><a href="">首页</a><span>—</span>列表</p>
     </div>
 
-    <div class="main">
+    <div class="main" ng-controller="listController">
         <!--显示文章列表-->
-        <div class="list-item">
-            <a href="">
-                <img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">
-            </a>
-            <div class="content">
-                <p class="title">老张博客模板分享</p>
-                <p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>
-            </div>
-            <hr/>
-            <div>
-                <span class="author">
-                    <span>老张</span>
-                    <span>9天前</span>
-                </span>
-                <span class="btn-group">
-                    <a href="" class="layui-btn">演示</a>
-                    <a href="" class="layui-btn">下载</a>
-                </span>
-            </div>
-        </div>
-        <div class="list-item">
-            <a href="">
-                <img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">
-            </a>
-            <div class="content">
-                <p class="title">老张博客模板分享</p>
-                <p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>
-            </div>
-            <hr/>
-            <div>
-                <span class="author">
-                    <span>老张</span>
-                    <span>9天前</span>
-                </span>
-                <span class="btn-group">
-                    <a href="" class="layui-btn">演示</a>
-                    <a href="" class="layui-btn">下载</a>
-                </span>
-            </div>
-        </div>
-        <div class="list-item">
-            <a href="">
-                <img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">
-            </a>
-            <div class="content">
-                <p class="title">老张博客模板分享</p>
-                <p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>
-            </div>
-            <hr/>
-            <div>
-                <span class="author">
-                    <span>老张</span>
-                    <span>9天前</span>
-                </span>
-                <span class="btn-group">
-                    <a href="" class="layui-btn">演示</a>
-                    <a href="" class="layui-btn">下载</a>
-                </span>
-            </div>
-        </div>
-        <div class="list-item">
-            <a href="">
-                <img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">
-            </a>
-            <div class="content">
-                <p class="title">老张博客模板分享</p>
-                <p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>
-            </div>
-            <hr/>
-            <div>
-                <span class="author">
-                    <span>老张</span>
-                    <span>9天前</span>
-                </span>
-                <span class="btn-group">
-                    <a href="" class="layui-btn">演示</a>
-                    <a href="" class="layui-btn">下载</a>
-                </span>
-            </div>
-        </div>
-        <div class="list-item">
-            <a href="">
-                <img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">
-            </a>
-            <div class="content">
-                <p class="title">老张博客模板分享</p>
-                <p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>
-            </div>
-            <hr/>
-            <div>
-                <span class="author">
-                    <span>老张</span>
-                    <span>9天前</span>
-                </span>
-                <span class="btn-group">
-                    <a href="" class="layui-btn">演示</a>
-                    <a href="" class="layui-btn">下载</a>
-                </span>
-            </div>
-        </div>
-        <div class="list-item">
-            <a href="">
-                <img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">
-            </a>
-            <div class="content">
-                <p class="title">老张博客模板分享</p>
-                <p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>
-            </div>
-            <hr/>
-            <div>
-                <span class="author">
-                    <span>老张</span>
-                    <span>9天前</span>
-                </span>
-                <span class="btn-group">
-                    <a href="" class="layui-btn">演示</a>
-                    <a href="" class="layui-btn">下载</a>
-                </span>
-            </div>
-        </div>
-        <div class="list-item">
-            <a href="">
-                <img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">
-            </a>
-            <div class="content">
-                <p class="title">老张博客模板分享</p>
-                <p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>
-            </div>
-            <hr/>
-            <div>
-                <span class="author">
-                    <span>老张</span>
-                    <span>9天前</span>
-                </span>
-                <span class="btn-group">
-                    <a href="" class="layui-btn">演示</a>
-                    <a href="" class="layui-btn">下载</a>
-                </span>
-            </div>
-        </div>
-        <div class="list-item">
-            <a href="">
-                <img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">
-            </a>
-            <div class="content">
-                <p class="title">老张博客模板分享</p>
-                <p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>
-            </div>
-            <hr/>
-            <div>
-                <span class="author">
-                    <span>老张</span>
-                    <span>9天前</span>
-                </span>
-                <span class="btn-group">
-                    <a href="" class="layui-btn">演示</a>
-                    <a href="" class="layui-btn">下载</a>
-                </span>
-            </div>
-        </div>
+        <ul>
+            <li class="list-item" ng-repeat="x in arr">
+                <img class="pic" src="{{x.backpic}}" alt="">
+                <div class="content">
+                    <p class="title">{{x.title}}</p>
+                    <p class="brief">{{x.brief}}</p>
+                </div>
+                <hr/>
+                <div>
+                    <span class="author">
+                        <span>{{x.author}}</span>
+                        <span>{{x.date}}</span>
+                    </span>
+                    <span class="btn-group">
+                        <a href="{{x.downloadUrl}}" class="layui-btn">演示</a>
+                        <a href="{{x.showUrl}}" class="layui-btn">下载</a>
+                    </span>
+                </div>
+            </li>
+            <!--<li class="list-item">-->
+                <!--<a href="">-->
+                    <!--<img class="pic" src="http://www.phplaozhang.com/uploads/images/20170225/3955af9f9c993e0c01fad2262a06f8c1_thumb_270_180.png" alt="">-->
+                <!--</a>-->
+                <!--<div class="content">-->
+                    <!--<p class="title">老张博客模板分享</p>-->
+                    <!--<p class="brief">老张博客后台模版分享,用的layui搭建的简洁大方的后台模版，简单易用，方便！</p>-->
+                <!--</div>-->
+                <!--<hr/>-->
+                <!--<div>-->
+                    <!--<span class="author">-->
+                        <!--<span>老张</span>-->
+                        <!--<span>9天前</span>-->
+                    <!--</span>-->
+                    <!--<span class="btn-group">-->
+                        <!--<a href="" class="layui-btn">演示</a>-->
+                        <!--<a href="" class="layui-btn">下载</a>-->
+                    <!--</span>-->
+                <!--</div>-->
+            <!--</li>-->
+        </ul>
         <!--分页-->
         <div class="page-btn">
             <fieldset class="layui-elem-field">
                 <legend>分页</legend>
                 <div class="layui-btn-group layui-form">
-                    <button class="layui-btn">首页</button>
-                    <button class="layui-btn">上一页</button>
-                    <button class="layui-btn">下一页</button>
-                    <button class="layui-btn">尾页</button>
+                    <button class="layui-btn" ng-click="firstPage()">首页</button>
+                    <button class="layui-btn" ng-click="previous()">上一页</button>
+                    <button class="layui-btn" ng-click="nextPage()">下一页</button>
+                    <button class="layui-btn" ng-click="lastPage()">尾页</button>
                     <div class="layui-input-inline">
                         <select name="page" id="" lay-verify="required">
                             <option value=""></option>
-                            <option value="0">第一页</option>
-                            <option value="1">第二页</option>
-                            <option value="2">第三页</option>
-                            <option value="3">第四页</option>
-                            <option value="4">第五页</option>
-                            <option value="5">第六页</option>
+                            <option value="{{i}}" ng-repeat="i in pages">
+                                第{{i+1}}页
+                            </option>
                         </select>
                     </div>
                 </div>
@@ -251,6 +135,7 @@
 </body>
 <script src="./lib/layui/layui.js"></script>
 <script src="js/common.js"></script>
+<script src="js/list.js"></script>
 <script>
     /*
      * 要启用form表单，否则不能使用
