--- a/login.html
+++ b/login.html
@@ -10,27 +10,35 @@
     <link rel="stylesheet" href="css/login.css"/>
 </head>
 <body>
+
     <div class="nav">
     <ul class="layui-nav">
         <li class="layui-nav-item layui-this">
             <a href="">首页</a>
+        </li>
+        <li class="layui-nav-item">
+            <a href="">编程语言</a>
             <dl class="layui-nav-child">
-                <dd><a href="">首页子项1</a></dd>
-                <dd><a href="">首页子项2</a></dd>
-                <dd><a href="">首页子项3</a></dd>
+                <dd><a href="">java</a></dd>
+                <dd><a href="">c++</a></dd>
+                <dd><a href="">js</a></dd>
+                <dd><a href="">html/css</a></dd>
             </dl>
         </li>
         <li class="layui-nav-item">
-            <a href="">老高推荐的VPS</a>
+            <a href="">后台技术</a>
+            <dl class="layui-nav-child">
+                <dd><a href="">SpringBoot</a></dd>
+                <dd><a href="">Hibernate</a></dd>
+                <dd><a href="">Struts2</a></dd>
+                <dd><a href="">SpringMVC</a></dd>
+            </dl>
         </li>
         <li class="layui-nav-item">
-            <a href="">路由器教程</a>
+            <a href="">生活感悟</a>
         </li>
         <li class="layui-nav-item">
-            <a href="">翻越功夫墙</a>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">Typecho插件</a>
+            <a href="">杂谈</a>
         </li>
         <li class="layui-nav-item">
             <a href="">归档</a>
@@ -38,14 +46,14 @@
         <li class="layui-nav-item">
             <a href="">关于我</a>
         </li>
-
     </ul>
     <!--搜索栏-->
     <span class="search-btn">
             <input type="text" placeholder="搜索" class="search-input" maxlength="20"/>
             <i class="layui-icon">&#xe615;</i>
-    </span>
+        </span>
 </div>
+
     <div class="main">
         <p class="title">登陆</p>
         <hr/>
