--- a/journal.html
+++ b/journal.html
@@ -68,26 +68,12 @@
         </div>
         <ul ng-controller="listController">
             <li ng-repeat="x in arr">
-                <span>{{x.date}}</span>
+                <span class="time">{{x.date}}</span>
                 <span class="icon">
                     <i class="layui-icon">&#xe617;</i>
                 </span>
                 <span>{{x.thing}}</span>
             </li>
-            <!--<li>-->
-                <!--<span>2017年02月25日</span>-->
-                <!--<span>-->
-                    <!--<i class="layui-icon">&#xe617;</i>-->
-                <!--</span>-->
-                <!--<span>老张博客的后台模版已做分享，用的layui搭建的简洁大方的前台模版，简单易用，方便！</span>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<span>2017年02月25日</span>-->
-                <!--<span>-->
-                    <!--<i class="layui-icon">&#xe617;</i>-->
-                <!--</span>-->
-                <!--<span>老张博客的后台模版已做分享，用的layui搭建的简洁大方的前台模版，简单易用，方便！</span>-->
-            <!--</li>-->
         </ul>
     </div>
     <div class="layui-footer footer">
