前端页面基本完成，修改了搜索栏的样式，将原来现实动画删除

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ul>
         <!--搜索栏-->
         <span class="search-btn">
-            <input type="text" placeholder="搜索" class="search-input" maxlength="20"/>
+            <input type="text" placeholder="搜索" class="search-input layui-input " maxlength="20"/>
             <i class="layui-icon">&#xe615;</i>
         </span>
     </div>
