--- a/list.html
+++ b/list.html
@@ -13,47 +13,47 @@
 <body ng-app="app">
     <!--导航条-->
     <div class="nav">
-    <ul class="layui-nav">
-        <li class="layui-nav-item layui-this">
-            <a href="">首页</a>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">编程语言</a>
-            <dl class="layui-nav-child">
-                <dd><a href="">java</a></dd>
-                <dd><a href="">c++</a></dd>
-                <dd><a href="">js</a></dd>
-                <dd><a href="">html/css</a></dd>
-            </dl>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">后台技术</a>
-            <dl class="layui-nav-child">
-                <dd><a href="">SpringBoot</a></dd>
-                <dd><a href="">Hibernate</a></dd>
-                <dd><a href="">Struts2</a></dd>
-                <dd><a href="">SpringMVC</a></dd>
-            </dl>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">生活感悟</a>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">杂谈</a>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">归档</a>
-        </li>
-        <li class="layui-nav-item">
-            <a href="">关于我</a>
-        </li>
-    </ul>
-    <!--搜索栏-->
-    <span class="search-btn">
-            <input type="text" placeholder="搜索" class="search-input" maxlength="20"/>
-            <i class="layui-icon">&#xe615;</i>
-        </span>
-</div>
+        <ul class="layui-nav">
+            <li class="layui-nav-item layui-this">
+                <a href="">首页</a>
+            </li>
+            <li class="layui-nav-item">
+                <a href="">编程语言</a>
+                <dl class="layui-nav-child">
+                    <dd><a href="">java</a></dd>
+                    <dd><a href="">c++</a></dd>
+                    <dd><a href="">js</a></dd>
+                    <dd><a href="">html/css</a></dd>
+                </dl>
+            </li>
+            <li class="layui-nav-item">
+                <a href="">后台技术</a>
+                <dl class="layui-nav-child">
+                    <dd><a href="">SpringBoot</a></dd>
+                    <dd><a href="">Hibernate</a></dd>
+                    <dd><a href="">Struts2</a></dd>
+                    <dd><a href="">SpringMVC</a></dd>
+                </dl>
+            </li>
+            <li class="layui-nav-item">
+                <a href="">生活感悟</a>
+            </li>
+            <li class="layui-nav-item">
+                <a href="">杂谈</a>
+            </li>
+            <li class="layui-nav-item">
+                <a href="">归档</a>
+            </li>
+            <li class="layui-nav-item">
+                <a href="">关于我</a>
+            </li>
+        </ul>
+        <!--搜索栏-->
+        <span class="search-btn">
+                <input type="text" placeholder="搜索" class="search-input layui-input " maxlength="20"/>
+                <i class="layui-icon">&#xe615;</i>
+            </span>
+    </div>
 
     <div class="site-tips head">
         <p><a href="">首页</a><span>—</span>列表</p>
