--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -88,6 +88,12 @@
             </div>
         </div>
     </div>
+
+    <!--背景音乐-->
+    <div class="bk-music" ng-controller="bkMusic">
+        <music></music>
+    </div>
+
     <!--显示文章等等东西-->
     <div class="middle">
         <!--首页内容列表-->
@@ -154,8 +160,9 @@
 
 </body>
 <script src="./lib/layui/layui.js"></script>
-<script src="js/common.js"></script>
 <script src="./js/index.js"></script>
+<script src="./js/common.js"></script>
+<script src="./js/music.js"></script>
 <script src="./js/util.js"></script>
 <script src="./js/search.js"></script>
 </html>
