--- a/src/main/resources/static/listwithoutpic.html
+++ b/src/main/resources/static/listwithoutpic.html
@@ -64,6 +64,11 @@
         <p>列表<span>—</span>{{category}}</p>
     </div>
 
+    <!--背景音乐-->
+    <div class="bk-music" ng-controller="bkMusic">
+        <music></music>
+    </div>
+
     <div class="main">
         <div class="left" ng-controller="list">
             <!--显示文章列表-->
@@ -169,6 +174,7 @@
 
 </body>
 <script src="./lib/layui/layui.js"></script>
-<script src="js/common.js"></script>
 <script src="js/listwithoutpic.js"></script>
+<script src="js/common.js"></script>
+<script src="js/music.js"></script>
 </html>
